index.html final edits, i hope

--- a/index.html
+++ b/index.html
@@ -47,16 +47,14 @@
     <div class="row">
       <div class="col-lg-7 col-md-12">
         <div class="box">
-          <h3 class="title">Summary: Latitude vs. X</h3>
+          <h3 class="title">Latitude: Does it really make a difference?</h3>
           <hr>
           <img src="Resources/assets/images/Fig1.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
           <p> This project was compiled from the OpenWeatherMap API using current data to create the 4 visualizations, shown here. 
             Starting with a city's latitude in reference to the equator, and comparing that data with other metrics to find any type of correlation.
             This analysis was one on a dataset of over 500 cities randomly selected from the API.</p>
-          <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude.
-            Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the
-            source data and visualizations created as part of the analysis, as well as explanations and descriptions of
-            any trends and correlations witnessed.</p>
+          <p> After importing the data and creating visualizations on temperature, cloudiness, wind speed, and humidity as they compare to latitude using MatPlotLib.
+            A smaller analysis was done on that project. However this website aims to provide a little more insight along with an easier to navigate way to view the data.</p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
