chart visualization edits

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
       <div class="col-lg-5 col-md-12">
         <div class="box">
-          <h5 class="title">Visualizations</h5>
+          <h5 class="title">MatPlotLib Charts</h5>
           <hr>
           <div class="container">
             <div class="row" style="padding-bottom: 25px;">
