--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
               Plots
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="Max_temp.html">Max Temperature</a>
+              <a class="dropdown-item" href="max_temperature.html">Max Temperature</a>
               <a class="dropdown-item" href="humidity.html">Humidity</a>
               <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
               <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="comparisons.html">Comparison</a>
+            <a class="nav-link" href="comparisons.html">Comparisons</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="data.html">Data</a>
@@ -49,7 +49,7 @@
         <div class="box">
           <h3 class="title">Latitude: Does it really make a difference?</h3>
           <hr>
-          <img src="Resources/assets/images/Fig1.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
+          <img src="Resources/assets/images/Fig1.png" class="vizualization rounded float-left" alt="Max Temperature Plot">
           <p> This project was compiled from the OpenWeatherMap API using current data to create the 4 visualizations, shown here. 
             Starting with a city's latitude in reference to the equator, and comparing that data with other metrics to find any type of correlation.
             This analysis was one on a dataset of over 500 cities randomly selected from the API.</p>
@@ -59,30 +59,30 @@
       </div>
       <div class="col-lg-5 col-md-12">
         <div class="box">
-          <h5 class="title">MatPlotLib Charts</h5>
+          <h5 class="title">MatPlotLib Plots</h5>
           <hr>
           <div class="container">
             <div class="row" style="padding-bottom: 25px;">
               <div class="col-6">
                 <a href="max_temperature.html">
-                  <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Image">
+                  <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Plot">
                 </a>
               </div>
               <div class="col-6">
                 <a href="humidity.html">
-                  <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
+                  <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Plot">
                 </a>
               </div>
             </div>
             <div class="row" style="padding-bottom: 25px;">
               <div class="col-6">
                 <a href="cloudiness.html">
-                  <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
+                  <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Plot">
                 </a>
               </div>
               <div class="col-6">
                 <a href="wind_speed.html">
-                  <img class="panel" src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
+                  <img class="panel" src="Resources/assets/images/Fig4.png" alt="Wind Speed Plot">
                 </a>
               </div>
             </div>
