--- a/humidity.html
+++ b/humidity.html
@@ -54,7 +54,11 @@
           <hr>
           <img src="Resources/assets/images/Fig2.png" alt="Humidity Plot">
           <p>Humidity seems to be high across the board in every latitude, but remember that high humidity is a representation of how much evaporation is happening.
-              Giving us another metric to try to understand the mystery of latitude compared to the weather
+              Giving us another metric to try to understand the mystery of latitude compared to the weather in this case seems to show no real correlation other than humidity is high across all latitudes.
+              We can infer that humidity is something that occurs year round in all latitudes fairly frequently, only rarely coming to zero percent humidity. 
+            </p>
+            <p> And even then in what we can assume are the most arid climates on Earth.
+                By their latitude however it would appear they are above the artic circle.
           </p>
         </div>
       </div>
