--- a/wind_speed.html
+++ b/wind_speed.html
@@ -52,7 +52,7 @@
           <p>Much like cloudiness, wind speed does not seem to have a trend that we can very visibly see.
               However there are some interesting outliers at the extremes of latitude we can point to as interesting.
               Especially when taking in to consideration that these hinger windspeeds might be atributed in some way to the lowered overall temperatures in northern latitudes at the time of testing.
-              Other than that there seems to be no correlation for the rest of the data suggesting that wind speeds around the world tend to stay in the range of 0-20mph.
+              Other than that there seems to be no correlation for the rest of the data suggesting that wind speeds around the world tend to stay in the range of 0-20mph on a regular day.
           </p>
         </div>
       </div>
