--- a/comparisons.html
+++ b/comparisons.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Bootstrap Visualization Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Bootstrap & CSS Links -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
-    
   <link rel="stylesheet" type="text/css" href="style.css">
-
 </head>
-
 <body>
-  <!-- Nav -->
   <div class="navigation">
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" style="background-color: rgb(175, 175, 175);" href="index.html">Latitude</a>
@@ -52,9 +45,9 @@
     <div class="row">
       <div>
         <div class="box">
-          <h3 class="title">Comparison: Latitude vs X</h3>
+          <h3 class="title">Latitude vs. a new challenger!</h3>
           <hr>
-          <p>Click any plot to get an in-depth analysis.</p>
+          <p>Now the visualizations are even BIGGER, recommended for users with tiny eyes or those sitting farther away from the computer screen.</p>
           <div class="container" style="padding-bottom: 40px;">
             <div class="row">
               <div class="col-lg-6" style="padding: 30px;">
