--- a/comparisons.html
+++ b/comparisons.html
@@ -52,7 +52,7 @@
             <div class="row">
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">Compared to: Max Temperature</div>
-                <a href="Max_temp.html">
+                <a href="max_temperature.html">
                   <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Plot">
                 </a>
               </div>
