--- a/index.html
+++ b/index.html
@@ -43,51 +43,48 @@
       </div>
     </nav>
   </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-7 col-md-12">
+  <div class="container-fluid mx-5">
+    <div class="row mt-4">
+      <div class="col-md-7 col-sm-12 bg-white p-4">
         <div class="box">
-          <h3 class="title">Latitude: Does it really make a difference?</h3>
+          <h1 class="title display-5">Latitude: Does it really make a difference?</h1>
           <hr>
-          <img src="Resources/assets/images/Fig1.png" class="vizualization rounded float-left" alt="Max Temperature Plot">
-          <p> This project was compiled from the OpenWeatherMap API using current data to create the 4 visualizations, shown here. 
+          <img class="w-50 float-left" src="Resources/assets/images/Fig1.png" class="vizualization rounded float-left" alt="Max Temperature Plot">
+          <p class="text-justify"> This project was compiled from the OpenWeatherMap API using current data to create the 4 visualizations, shown here. 
             Starting with a city's latitude in reference to the equator, and comparing that data with other metrics to find any type of correlation.
             This analysis was one on a dataset of over 500 cities randomly selected from the API.</p>
-          <p> After importing the data and creating visualizations on temperature, cloudiness, wind speed, and humidity as they compare to latitude using MatPlotLib.
+          <p class="text-justify"> After importing the data and creating visualizations on temperature, cloudiness, wind speed, and humidity as they compare to latitude using MatPlotLib.
             A smaller analysis was done on that project. However this website aims to provide a little more insight along with an easier to navigate way to view the data.</p>
         </div>
       </div>
-      <div class="col-lg-5 col-md-12">
-        <div class="box">
-          <h5 class="title">MatPlotLib Plots</h5>
+      <div class="col-md-1"></div>
+      <div class="col-lg-4 col-md-12 p-4 bg-white">
+          <h1 class="title display-5">MatPlotLib Plots</h1><br>
           <hr>
-          <div class="container">
-            <div class="row" style="padding-bottom: 25px;">
+            <div class="row">
               <div class="col-6">
                 <a href="max_temperature.html">
-                  <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Plot">
+                  <img class="panel w-100" src="Resources/assets/images/Fig1.png" alt="Max Temperature Plot">
                 </a>
               </div>
               <div class="col-6">
                 <a href="humidity.html">
-                  <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Plot">
+                  <img class="panel w-100" src="Resources/assets/images/Fig2.png" alt="Humidity Plot">
                 </a>
               </div>
             </div>
             <div class="row" style="padding-bottom: 25px;">
               <div class="col-6">
                 <a href="cloudiness.html">
-                  <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Plot">
+                  <img class="panel w-100" src="Resources/assets/images/Fig3.png" alt="Cloudiness Plot">
                 </a>
               </div>
               <div class="col-6">
                 <a href="wind_speed.html">
-                  <img class="panel" src="Resources/assets/images/Fig4.png" alt="Wind Speed Plot">
+                  <img class="panel w-100" src="Resources/assets/images/Fig4.png" alt="Wind Speed Plot">
                 </a>
               </div>
             </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
